--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1415,6 +1415,7 @@ section {
   text-align: center;
   padding: 15px;
   font-weight: 600;
+  margin-bottom: 15px;
 }
 
 .contact .php-email-form .loading {
@@ -1422,6 +1423,7 @@ section {
   background: #fff;
   text-align: center;
   padding: 15px;
+  margin-bottom: 15px;
 }
 
 .contact .php-email-form .loading:before {
